# tree-sitter-confindent

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.tangled/workflows/: mirror.yaml
bindings/c/: tree-sitter-confindent.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_confindent/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConfindent/: confindent.h
bindings/swift/TreeSitterConfindentTests/: TreeSitterConfindentTests.swift
helix/: languages.toml
helix/runtime/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: simple_values.txt
