[package]
name = "tree-sitter-confindent"
description = "tree-sitter implementation for the Confindent configuration language"
version = "0.1.0"
authors = ["Devon Sawatsky <devon@nove.dev>"]
license = "ISC"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "confindent"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://tangled.org/@nove.dev/tree-sitter-confindent"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
